Add some more sprites to S14X. Fiddle with the parallax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")
 FIND_PACKAGE(KGLT REQUIRED)
 FIND_PACKAGE(KAZMATH REQUIRED)
 FIND_PACKAGE(Boost COMPONENTS system filesystem thread date_time regex REQUIRED)
+FIND_PACKAGE(Freetype REQUIRED)
 
 FIND_PACKAGE(PkgConfig)
 PKG_CHECK_MODULES(SIGC QUIET sigc++-2.0)
@@ -24,6 +25,7 @@ INCLUDE_DIRECTORIES(
     ${SDL_INCLUDE_DIRS}
     ${GL_INCLUDE_DIRS}
     ${GLU_INCLUDE_DIRS}    
+    ${FREETYPE_INCLUDE_DIRS}
 )
 
 LINK_LIBRARIES(
@@ -41,6 +43,7 @@ LINK_LIBRARIES(
     ${GLU_LIBRARIES}
 
     ${SIGC_LIBRARIES}
+    ${FREETYPE_LIBRARY}
 )
 
 ADD_SUBDIRECTORY(k4x)
